--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -574,7 +574,7 @@
         }
 
         var onResponseCal = function(response){
-            //calendar.addEventSource(JSON.parse(response));
+            calendar.addEventSource(JSON.parse(response));
         }
 
         //else
