Fix Grammarly stopping printing

--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -993,6 +993,7 @@
                 document.getElementById('announcementCont').innerHTML + 
             '</div>'
         );
+        w.stop();
         w.print();
         w.close();
     }
