Extend Upcoming events to 120 days

--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -334,6 +334,9 @@
         }
         #calendar{
             font-family: 'Roboto', Arial, sans-serif;
+              max-height: 400px;
+            overflow-y: scroll;
+          }
         }
         .fc table{
             font-size: 14px;
@@ -584,7 +587,7 @@
 
 
 <script>
-    const NUM_DAYS_TO_SHOW_CAL = 2
+    const NUM_DAYS_TO_SHOW_CAL = 120;
     // window.onresize = function(){ console.log(window.innerWidth)}
 
 
