Make links clickable in announcements

--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -22,6 +22,9 @@
         .hover:hover {
           text-decoration: underline;
         }
+        #announcementText a:hover{
+            text-decoration: underline !important;
+        }
         .top-bar{
             margin-bottom: 25px;
         }
