--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -1251,6 +1251,7 @@
                 'td { padding-left: 5px; padding-top: 5px; padding-bottom: 5px; vertical-align: top; }'+
                 'table { border-collapse:collapse; }'+
                 'tr { border:1px solid #ececec; }'+
+                'a {color:black !important; text-decoration:none !important}'+
 
 
             '</style>'+
