--- a/DailyBulletin.html
+++ b/DailyBulletin.html
@@ -544,7 +544,6 @@
             flex-direction: row;
             flex-wrap: wrap;
             width: 100%;
-            max-width: 1280px; /*remove in final*/
             margin-left: auto; /*remove in final*/
             margin-right: auto; /*remove in final*/
         }
@@ -565,7 +564,7 @@
     </style>
 </head>
 
-<body style="caret-color: transparent !important; max-width: 1280px; margin-left: auto;margin-right: auto;position: relative;">
+<body style="caret-color: transparent !important; margin-left: auto;margin-right: auto;position: relative;max-width: 1530px;padding-left: 15px;padding-right: 15px;">
     <div style="display: flex;">
       <img id="statusImg" style="height: 40px;display: inline;" src="">
         
@@ -610,6 +609,8 @@
           }
           .Special-Menu-Container.collapsed.show{
             display: block !important;
+            overflow: clip;
+            border-radius:20px;
           }
           .Special-Menu-Container.collapsed>.button-panel, .Special-Menu-Container.collapsed>.button-panel.mod{
             box-shadow:none !important;
